# taskiq-collector

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Caddyfile  README.md  pyproject.toml
.github/workflows/: tests.yml
deploy/: Dockerfile  docker-compose.dev.yml  docker-compose.otlp.yml  docker-compose.yml
frontend/: .eslintrc.js  nuxt.config.js  package.json
frontend/components/: TaskTable.vue  TaskView.vue
frontend/layouts/: default.vue
frontend/pages/tasks/: _id.vue  index.vue
frontend/plugins/: services.js
frontend/services/: task_service.js
taskiq_collector/: __init__.py  __main__.py  alembic.ini  conftest.py  logging.py  settings.py
taskiq_collector/db/: base.py  config.py  fields.py
taskiq_collector/db/migrations/: env.py
taskiq_collector/db/migrations/versions/: 2022-08-15-22-34_249a7fcd4d63.py
taskiq_collector/db/models/: __init__.py  task.py
taskiq_collector/services/: __init__.py
taskiq_collector/tests/: __init__.py
taskiq_collector/web/: __init__.py  application.py  lifetime.py
taskiq_collector/web/api/: __init__.py  router.py
taskiq_collector/web/api/docs/: __init__.py  views.py
taskiq_collector/web/api/echo/: __init__.py  views.py
taskiq_collector/web/api/monitoring/: __init__.py
taskiq_collector/web/api/tasks/: __init__.py  schema.py  views.py
